add blog type
