# app/models/blog.model.js
@@ -13,6 +13,7 @@ const Blog = function(blog) {
     this.blog_location = blog.blog_location;
     this.blog_thumbs = blog.blog_thumbs;
     this.thumb_author_list = blog.thumb_author_list;
+    this.blog_type = blog.blog_type;
     this.date_modified = blog.date_modified;
     this.date_creation = blog.date_creation;
 };
@@ -32,20 +33,7 @@ Blog.create = (newBlog, result) => {
 
 
 
-Blog.getByAttrs = async(blog, page, limit, result) => {
-
-    // sqlScript = `SELECT 
-    // bid,
-    // comment_bid,
-    // author_uid,
-    // blog_info,
-    // blog_status,
-    // blog_location,
-    // blog_thumbs,
-    // thumb_author_list,
-    // date_modified,
-    // date_creation
-    //  FROM blog_table WHERE 1=1 `;
+Blog.getAll = async(blog, page, limit, result) => {
 
     let sqlScript = " FROM blog_table  WHERE 1=1 ";
 
@@ -71,9 +59,12 @@ Blog.getByAttrs = async(blog, page, limit, result) => {
         sqlScript += " AND blog_location = ? ";
         arr.push(blog.blog_location);
     }
-
+    if (blog.blog_type != null) {
+        sqlScript += " AND blog_type = ? ";
+        arr.push(blog.blog_type);
+    }
     const sqlCountHeader = "COUNT(DISTINCT bid)";
-    const sqlGetHeader = " DISTINCT  bid, comment_bid, author_uid, blog_info, blog_status, blog_location,  blog_thumbs,  thumb_author_list, date_modified, date_creation";
+    const sqlGetHeader = " DISTINCT  bid, comment_bid, author_uid, blog_info, blog_status, blog_location,  blog_thumbs,  thumb_author_list, blog_type, date_modified, date_creation";
     const orderBy = "date_creation";
 
     query("blog_table", page, arr, sqlCountHeader, sqlGetHeader, sqlScript, result, orderBy, limit);
@@ -81,6 +72,63 @@ Blog.getByAttrs = async(blog, page, limit, result) => {
 };
 
 
+Blog.getOne = async(blog, result) => {
+
+    sqlScript = `SELECT 
+    bid,
+    comment_bid,
+    author_uid,
+    blog_info,
+    blog_status,
+    blog_location,
+    blog_thumbs,
+    thumb_author_list,
+    blog_type,
+    date_modified,
+    date_creation
+     FROM blog_table WHERE 1=1 `;
+
+    let arr = [];
+
+    if (blog.bid != null) {
+        sqlScript += " AND bid = ? ";
+        arr.push(blog.bid);
+    }
+    if (blog.comment_bid != null) {
+        sqlScript += " AND comment_bid = ? ";
+        arr.push(blog.comment_bid);
+    }
+    if (blog.blog_info != null) {
+        sqlScript += " AND blog_info = ?  ";
+        arr.push(blog.blog_info);
+    }
+    if (blog.blog_status != null) {
+        sqlScript += " AND blog_status = ? ";
+        arr.push(blog.blog_status);
+    }
+    if (blog.blog_location != null) {
+        sqlScript += " AND blog_location = ? ";
+        arr.push(blog.blog_location);
+    }
+
+    sql.query(sqlScript, arr, (err, res) => {
+        if (err) {
+            console.log("error: ", err);
+            result(err, null);
+            return;
+        }
+
+        if (res.length) {
+            //console.log("found user: ", res[0]);
+            result(null, res[0]);
+            return;
+        }
+
+        // not found User with the user_sid
+        result({ kind: "not_found" }, null);
+    });
+
+};
 Blog.updateOwn = async(blog, result) => {
 
     sqlScript = " UPDATE blog_table SET ";
@@ -98,7 +146,10 @@ Blog.updateOwn = async(blog, result) => {
         sqlScript += "blog_location = ? , ";
         arr.push(blog.blog_location);
     }
-
+    if (blog.blog_type != null) {
+        sqlScript += "blog_type = ? , ";
+        arr.push(blog.blog_type);
+    }
 
     sqlScript += "date_modified = ? WHERE  (bid = ? and author_uid = ? )";
     arr.push(blog.date_modified);
